force-app/main/default/objects/breadwinner_qbo__BW_QB_Bundle_Item__c/breadwinner_qbo__BW_QB_Bundle_Item__c.object-meta.xml
<CustomObject>
    <label>QuickBooks Bundle Item</label>
    <nameField>
        <label>Bundle Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Bundle Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>