force-app/main/default/objects/breadwinner_qbo__BW_QB_Bundle_Item__c/fields/breadwinner_qbo__Bundle_Group__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Bundle_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle / Group</label>
    <referenceTo>breadwinner_qbo__BW_QB_Item__c</referenceTo>
    <relationshipLabel>Bundle Items</relationshipLabel>
    <relationshipName>Bundle_Items</relationshipName>
    <type>Lookup</type>
</CustomField>