force-app/main/default/objects/breadwinner_qbo__BW_QB_Bundle_Item__c/fields/breadwinner_qbo__Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>breadwinner_qbo__BW_QB_Item__c</referenceTo>
    <relationshipLabel>Bundles</relationshipLabel>
    <relationshipName>Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>