force-app/main/default/objects/breadwinner_qbo__BW_QB_Bundle_Item__c/fields/breadwinner_qbo__Quantity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>